# RECALL

./: .gitignore  README.md  package-lock.json  package.json
docs/: architecture.md  ranking.md  schema.md
python/: pyproject.toml  run_worker.py
python/recall_worker/api/: server.py
python/recall_worker/core/: config.py
python/recall_worker/db/: database.py
python/recall_worker/embeddings/: engine.py
python/recall_worker/indexing/: content.py  pipeline.py
python/recall_worker/ocr/: engine.py
python/recall_worker/search/: ranking.py  service.py  vector_index.py
python/recall_worker/transcription/: __init__.py  engine.py
python/tests/: test_database.py  test_hash_embedder.py  test_indexing_pipeline.py  test_ocr_engine.py  test_ranking.py  test_search_service.py  test_vector_index.py  test_worker_scheduler.py  test_worker_startup.py
scripts/: build_recall_technical_pdf.py  dev-tauri.ps1  package-models.ps1  prepare-worker-runtime.ps1  smoke-test.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/python/recall_worker/api/: server.py
src-tauri/resources/python/recall_worker/core/: config.py
src-tauri/resources/python/recall_worker/db/: database.py
src-tauri/resources/python/recall_worker/ocr/: engine.py
src-tauri/resources/python/recall_worker/search/: ranking.py  vector_index.py
src-tauri/src/: commands.rs  lib.rs  local_data.rs  models.rs  process.rs  state.rs  watchers.rs
src/app/: App.tsx  LeftNavRail.tsx  StatusPanel.tsx  TopHeader.tsx
src/features/assets/: AssetPreviewArt.tsx
src/features/folders/: FolderSidebar.tsx  FoldersView.tsx
src/features/preview/: PreviewModal.tsx
src/features/results/: ResultsGrid.tsx
src/features/search/: SearchBar.tsx  SearchView.tsx
src/features/status/: StatusPill.tsx
src/hooks/: useRecallApp.ts
src/lib/: mock.ts  tauri.ts
src/types/: contracts.ts
