[package]
name = "recall"
version = "0.1.0"
description = "Recall local-first screenshot and image search"
authors = ["OpenAI Codex"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3.6"
notify-debouncer-mini = "0.7"
rfd = "0.17"
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
